Jump Start Changelog
====================

2.1.2 - XX/XX/XXXX
------------------

* Fixed: Black background getting applied to single post content, when full-width or parallax featured image is set.
* Fixed: Minor RTL fixes for options interfaces.
* Updated TGMA plugin installer to 2.6.1.

--------------------------------------------------------------

2.1.1 - 07/08/2016
------------------

* **Updated Theme Blvd framework to 2.6.1**
* New: Styles presets added to theme options; see *Appearance > Theme Options > Styles*.
* New: Added option to hide bounding border for transparent header of "Agent" base; see *Appearance > Theme Options > Styles > Transparent Header*.
* New: Added option to disable theme's WooCommerce floating shopping cart; see *Appearance > Theme Options > Plugins > WooCommerce*.
* New: Added option for Google Maps API Key, which is required by Google Maps API, as of June 22, 2016; see *Appearance > Theme Options > Configuration > Google Maps*. [Learn More](http://docs.themeblvd.com/article/56-google-maps-api)
* Improvement: Better handling of pulling default value for new option, when theme options have already been saved (i.e. smoother updates when the theme adds new options, which you haven't configured).
* Improvement: Allow unfiltered HTML when saving text and textareas.
* Improvement: De-enqueued `theme.js`, no longer needed with framework 2.6+.
* Improvement: When page title is hidden on full-width or full-screen featured image, image is now 100% opacity.
* Improvement: Removed dark form field styling when in an area with a dark background color; it causes messy CSS and too many plugin conflicts.
* Improvement: Minor styling adjustments to main menu dropdowns; across all theme bases, they now match more with "Agent" base.
* Fixed: Footer columns not pulling page content.
* Fixed: Post showcase filtering not correctly effecting corresponding lightbox gallery.