@@ -12,6 +12,7 @@
  *   1.8 - Code Elements
  *   1.9 - Pagination
  *   1.10 - Main Navigation
+ *   1.11 - Carousel
  * 2.0 - Common Classes
  *   2.1 - General
  *   2.2 - Images
@@ -442,6 +443,9 @@ code.block {
 	-moz-box-sizing: content-box;
 	box-sizing: content-box;
 }
+
+/* Carousel */
+/* This section is just here for continuity with carousel RTL styling fixes. See this section of themeblvd-rtl.css */
 
 /* =Common Classes
 ----------------------------------------------- */
@@ -5236,7 +5240,6 @@ blockquote small {
 .tb-simple-slider .carousel-indicators {
 	padding: 0;
 }
-/* @noflip */
 .tb-simple-slider .carousel-indicators li {
 	float: left;
 	display: block;
